--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,7 @@
 							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 						</manifest>
 						<manifestEntries>
+							<Implementation-Vendor-Id>${project.groupId}/${project.artifactId}</Implementation-Vendor-Id>
 							<Implementation-Build>${buildNumber}</Implementation-Build>
 						</manifestEntries>
 					</archive>
@@ -142,6 +143,7 @@
 							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 						</manifest>
 						<manifestEntries>
+							<Implementation-Vendor-Id>${project.groupId}/${project.artifactId}</Implementation-Vendor-Id>
 							<Implementation-Build>${buildNumber}</Implementation-Build>
 						</manifestEntries>
 					</archive>
