--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>be.hobbiton</groupId>
 	<artifactId>oss-parent</artifactId>
-	<version>9.0-SNAPSHOT</version>
+	<version>9.0</version>
 	<packaging>pom</packaging>
 
 	<name>hobbiton OSS Parent</name>
@@ -28,7 +28,8 @@
 		<connection>scm:git:git@github.com:gertux/oss-parent.git</connection>
 		<developerConnection>scm:git:git@github.com:gertux/oss-parent.git</developerConnection>
 		<url>scm:git:git@github.com:gertux/oss-parent.git</url>
-	</scm>
+	  <tag>oss-parent-9.0</tag>
+  </scm>
 
 	<organization>
 		<name>hobbiton bvba</name>
