--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>be.hobbiton</groupId>
 	<artifactId>oss-parent</artifactId>
-	<version>9.1-SNAPSHOT</version>
+	<version>9.1</version>
 	<packaging>pom</packaging>
 
 	<name>hobbiton OSS Parent</name>
@@ -28,7 +28,7 @@
 		<connection>scm:git:git@github.com:gertux/oss-parent.git</connection>
 		<developerConnection>scm:git:git@github.com:gertux/oss-parent.git</developerConnection>
 		<url>scm:git:git@github.com:gertux/oss-parent.git</url>
-	  <tag>HEAD</tag>
+	  <tag>oss-parent-9.1</tag>
   </scm>
 
 	<organization>
