--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>be.hobbiton</groupId>
 	<artifactId>oss-parent</artifactId>
-	<version>9.2</version>
+	<version>9.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>hobbiton OSS Parent</name>
@@ -22,7 +22,7 @@
 		<connection>scm:git:git@github.com:gertux/oss-parent.git</connection>
 		<developerConnection>scm:git:git@github.com:gertux/oss-parent.git</developerConnection>
 		<url>scm:git:git@github.com:gertux/oss-parent.git</url>
-	  <tag>oss-parent-9.2</tag>
+	  <tag>HEAD</tag>
   </scm>
 
     <repositories>
